--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ SHOPIFY_API_KEY=
 SHOPIFY_API_SECRET=
 SHOPIFY_ACCESS_TOKEN=
 SHOPIFY_WEBHOOK_SECRET=
+SHOP_DOMAIN=
 
 # GoodBarber
 GOODBARBER_API_KEY=
